kubernetes/free-space-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: free-space-ingress
spec:
  rules:
  - host: freespace.com
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: frontend-free-space-service
            port: 
              number: 80
      - path: /api
        pathType: Exact
        backend:
          service:
            name: m-content-service
            port:
              number: 3001
